Initial GWT configuration.